SyncEvolution 0.4, xxxxxxx
--------------------------
* implemented authentication for Evolution databases
* synccompare was removing too many parts of vCards with 
  single-value ORG properties
* improved error reporting when selected server is not configured
* fix: in vCard 2.1 7-bit is the default encoding, so 8-bit
  UTF-8 characters are now avoided with quoted-printable encoding
  (illegal encoding had not caused problems though)
* fix for 0.4 pre 1: sending CHARSET is not allowed (and not
  needed) for vCard 3.0, so it was removed again (did not harm
  either)
* fix for 0.4 pre 1: sending vCard 2.1 to Synthesis server did
  not work because the new device info always mentioned 3.0 as
  the preferred format - now the preferred format matches the one
  that was configured and that thus will be used.

SyncEvolution 0.4 pre 1, 2006-08-06
-----------------------------------
* C++ client library revision "funambol30ga" plus the patches
  stored in its ".patches" directory:
  - the user agent string can now be modified in the
    spds/syncml/config.txt, but it is recommended to not set
    it explicitly. Then SyncEvolution will automatically insert
    its current version.
  - now compatible with additional servers (fixed some SyncML
    protocol issues, added support for sending device
    information)
  - revised API of the client library
  - #305795: for tasks the "text/x-todo" type from the configuration
    was sent to servers instead of the correct "text/calendar"
    provided by SyncEvolution itself
  - sync modes "refresh-client/server" can now be specified as
    "refresh-from-client/server" in the config
* updated default syncml/config.txt:
  - firstTimeSyncMode has never been implemented in the library,
    removed its documentation,
  - added documentation for userAgent
  - use "refresh-from-client/server"
* changed vCard parser to make it compatible with servers
  which send a verbatim semicolon as part of properties where